--- a/dos33.html
+++ b/dos33.html
@@ -2945,7 +2945,7 @@ With that "legalese" out of the way ... enjoy the read!
 2765:85 45          134             STA CNUM+1
                     135 ;
 2768:20 92 27       136             JSR <a class='x' href='#TSINIT'>TSINIT</a>      ; GO INIT SEARCH                ; &darr;
-276B:4C 73 27       137             JMP FLS1A                                       ; <a class='mem' name='_276B'>wastes</a> 1 bytes, <a class='x' href='#CLALL'>CLALL</a> has <span class='code'>JSR TSINIT, BNE SKIPNEXT</span> so why JMP ???
+276B:4C 73 27       137             JMP FLS1A                                       ; <a class='mem' name='_276B'>wastes</a> 1 byte, <a class='x' href='#CLALL'>CLALL</a> has <span class='code'>JSR TSINIT, BNE SKIPNEXT</span> so why JMP ???
 276E:20 9A 27       138 <a class='f' name='FLS1'     >FLS1        </a>JSR TSNXT       ; LOOK AT NEXT
 2771:F0 1D          139             BEQ FLS4        ; BR IF NO NET
                     140 ;
