--- a/dos33.html
+++ b/dos33.html
@@ -3186,22 +3186,22 @@ With that "legalese" out of the way ... enjoy the read!
 2888:4C 4F 41 C4    008             DCI "LOAD"                                      ; Either sort these by:
 288C:53 41 56 C5    009             DCI "SAVE"                                      ;   a) frequency of use, (best)
 2890:52 55 CE       010             DCI "RUN"                                       ;   b) alphabetical (better)
-2893:43 48 41 49 CE 011             DCI "CHAIN"$                                    ; i.e. "Power Users" are more likely to use BRUN, BLOAD, BSAVE before they use DELETE
-2898:44 45 4C 45    012             DCI "DELETE"$
+2893:43 48 41 49 CE 011             DCI "CHAIN"                                     ; i.e. "Power Users" are more likely to use BRUN, BLOAD, BSAVE before they use DELETE
+2898:44 45 4C 45    012             DCI "DELETE"
 289C:54 C5
 289E:4C 4F 43 CB    013             DCI "LOCK"
-28A2:55 4E 4C 4F    014             DCI "UNLOCK"$
+28A2:55 4E 4C 4F    014             DCI "UNLOCK"
 28A6:43 CB
-28A8:43 4C 4F 53 C5 015             DCI "CLOSE"$
+28A8:43 4C 4F 53 C5 015             DCI "CLOSE"
 28AD:52 45 41 C4    016             DCI "READ"
 28B1:45 58 45 C3    017             DCI "EXEC"                                      ; inconsistent abbreviation: EXECUTE
-28B5:57 52 49 54 C5 018             DCI "WRITE"$
-28BA:50 4F 53 49    019             DCI "POSITION"$
+28B5:57 52 49 54 C5 018             DCI "WRITE"
+28BA:50 4F 53 49    019             DCI "POSITION"
 2854:54 49 4F CE
 28C2:45 50 45 CE    020             DCI "OPEN"
-28C6:41 50 50 45    021             DCI "APPEND"$
+28C6:41 50 50 45    021             DCI "APPEND"
 28CA:4E C4
-28CC:52 45 4E 41    022             DCI "RENAME"$
+28CC:52 45 4E 41    022             DCI "RENAME"
 28D0:4D C5
 28D2:43 41 54 41    023             DCI "CATALOG"$                                  ; <a class='dumb' name='HNTODAOS2'>HNTODAOS: #2</a> Let's slow users down forcing them type 7 characters
 28D6:4C 4F C7                                                                       ; Which has a higher error rate of typos?
@@ -3209,12 +3209,12 @@ With that "legalese" out of the way ... enjoy the read!
 28DC:4E 4F 4D 4F CE 025             DCI "NOMON"$                                    ; /sarcasm Oh I see, we abbreviate the <i>uncomon</i> MONITOR but not the <b>common</b> CATALOG
 28E1:50 52 A3       026             DCI "PR#"
 28E4:49 4E A3       027             DCI "IN#"
-28E7:4D 41 58 46    028             DCI "MAXFILES"$
+28E7:4D 41 58 46    028             DCI "MAXFILES"
 28EB:49 4C 45 D3
 28EF:46 D0          029             DCI "FP"
 28F1:49 4E D4       030             DCI "INT"
-28F4:42 53 41 56 C5 031             DCI "BSAVE"$
-28F9:42 4C 4F 41 C4 032             DCI "BLOAD"$
+28F4:42 53 41 56 C5 031             DCI "BSAVE"
+28F9:42 4C 4F 41 C4 032             DCI "BLOAD"
 28FE:42 52 55 CE    033             DCI "BRUN"$                                     ; === <a class='ts' name='T1S8'>T1S8</a> ===
 2902:56 45 52 49    034             DCI "VERIFY"
 2906:46 D9
@@ -3535,7 +3535,7 @@ With that "legalese" out of the way ... enjoy the read!
                                                                                     ;         0307:A9 0D     LDA #$D     ; Command = CRQMAX
                                                                                     ;         0309:A0 00     LDY #0      ; FileManager.Command = Command
                                                                                     ;         030B:91 FD     STA ($FD),Y
-                                                                                    ;         030D:4C D6 03  JMP USERENT ; $AAFD FileManager$
+                                                                                    ;         030D:4C D6 03  JMP USERENT ; $AAFD FileManager
                     075 <a class='f' name='RVT'      >RVT         </a>EQU *                                           ; <a class='x' href='#USERNT'>USERENT</a> calls <a class='x' href='#FREAD'>FREAD</a>
 2AE5:7E 33          076             DW <a class='x' href='#GOODIO'>GOODIO</a>-<span class='n'>1</span>                                     ; [0] <a class='mem' name='_2AE5'>wastes</a> 2 bytes; See <a class='v' href='#CRMNUL'>CRMNUL</a>
 2AE7:89 2C          077             DW <a class='x' href='#RNXBYT'>RNXBYT</a>-<span class='n'>1</span>    ; 1-RD NEXT BYTE                 ; [1]
